fix tests and enhance search ranking